se realiza conexion con la base de datos